# Hannah

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  configure_satellite-pi.sh  create_satellite-base-pi.sh  renovate.json
.gitlab/issue_templates/: bug.md  feature_request.md
.gitlab/merge_request_templates/: default.md
autodeploy/: autodeploy.py  autodeploy.yaml.example
autodeploy/deploy/: hannah-autodeploy.service  install-macos.sh  install.sh
core/: config.example.yaml  main.py  requirements.txt
core/deploy/: auto-deploy.sh  hannah.service  install.sh  migrate_config_settings.py  migrate_rooms_db.py  migrate_settings_to_models.py  migrate_triggers_routines.py
core/hannah/: ble_location.py  ble_tags.py  car_registry.py  car_tracker.py  conversation.py  grpc_server.py  iobroker.py  llm.py  mqtt_handler.py  nlu.py  plink.py  residents.py  residents_manager.py  room_manager.py  routines.py  satellite_manager.py  settings_manager.py  stt.py  timers.py  tool_agent.py  trigger_engine.py  udp_server.py  user_manager.py  user_registry.py  webui.py
core/proto/: gen_proto.sh  hannah.proto
core/tests/: requirements-test.txt  test_alarm_manager.py  test_ble_location.py  test_ble_tags.py  test_car_registry.py  (+13 more)
hardware/: Hannah.kicad_sym
proxy/: Makefile  gen_proto.sh  go.mod  go.sum
satellite-esp/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.devkit  sdkconfig.defaults.rev2  sdkconfig.defaults.rev3  sdkconfig.defaults.rev4  sdkconfig.old
satellite-esp/components/hannah_audio/: CMakeLists.txt  Kconfig  hannah_audio.c  hannah_audio.h
satellite-esp/components/hannah_sensors/: CMakeLists.txt  Kconfig  hannah_sensors.c  hannah_sensors.h
satellite-esp/main/: CMakeLists.txt  main.c  pinmap.h
satellite-pi/: install.sh  requirements.txt  satellite.py
scripts/: gen_proto.sh  hannah_shell.py  upload-dev-firmware.ps1
telegram/: main.py  requirements.txt
voiceid/: app.py  enroll_voice.py  requirements.txt
webui/: config.example.yaml  main.py  wsgi.py
(+144 files in other folders)
